# academiccv-builder

./: CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  example.json  example.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  schema.json
cvbuilder/: __init__.py  builder.py  setup.py
cvbuilder/contexts/: __init__.py  html.py  latex.py  markdown.py
cvbuilder/modules/: __init__.py  award.py  contact.py  description.py  event.py  job.py  language.py  logos.py  project.py  publication.py  service.py  summary.py  supervision.py  talk.py  teach.py  text.py
cvbuilder/modules/utils/: etree_to_latex.py
docs/: NAVIGATION.md
docs/api/: NAVIGATION.md  builder.md
docs/api/contexts/: context.md  latex.md  markdown.md
json_example/: example.json  publications.json  summary.json
resources/css/: item.css  main.css  sidebar.css  style.css  summary.css
tests/html/: __init__.py  test_job.py
tests/latex/: test_job.py  test_publication.py  test_title.py
